# internal/codegen/structs.gen.go
@@ -136,15 +136,25 @@ var PublicStructs = map[string]any{
 
 	//
 
+	"RestAuthRestriction":                new(rest.AuthRestriction),
+	"RestConfig":                         new(rest.Config),
 	"RestDemoTwoWorkItemCreateRequest":   new(rest.DemoTwoWorkItemCreateRequest),
 	"RestDemoTwoWorkItemsResponse":       new(rest.DemoTwoWorkItemsResponse),
 	"RestDemoWorkItemCreateRequest":      new(rest.DemoWorkItemCreateRequest),
 	"RestDemoWorkItemsResponse":          new(rest.DemoWorkItemsResponse),
+	"RestEvent":                          new(rest.Event),
+	"RestGinServerOptions":               new(rest.GinServerOptions),
+	"RestHandlers":                       new(rest.Handlers),
 	"RestNotification":                   new(rest.Notification),
+	"RestOAValidatorOptions":             new(rest.OAValidatorOptions),
 	"RestPaginatedNotificationsResponse": new(rest.PaginatedNotificationsResponse),
+	"RestPaginationPage":                 new(rest.PaginationPage),
 	"RestProjectBoardCreateRequest":      new(rest.ProjectBoardCreateRequest),
 	"RestProjectBoardResponse":           new(rest.ProjectBoardResponse),
 	"RestProjectName":                    new(rest.ProjectName),
+	"RestPubSub":                         new(rest.PubSub),
+	"RestServer":                         new(rest.Server),
+	"RestServerInterfaceWrapper":         new(rest.ServerInterfaceWrapper),
 	"RestSharedWorkItemFields":           new(rest.SharedWorkItemFields),
 	"RestTeamCreateRequest":              new(rest.TeamCreateRequest),
 	"RestTeamUpdateRequest":              new(rest.TeamUpdateRequest),
